[project]
name = "qt_liquid_pool"
authors = [{name = "Leon Dionne", email = "ldionne@dridesign.sh.cn"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
	"PyQt5",
	"conn_jack >= 1.3.2",
	"liquiphy >= 1.1.1",
	"soso_qt_extras >= 1.7.0",
]

[project.urls]
Home = "https://github.com/Zen-Master-SoSo/qt_liquid_pool"

[project.scripts]
qt_liquid_pool = "qt_liquid_pool.__main__:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[bumpver]
current_version = "1.2.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[bumpver.file_patterns]
"qt_liquid_pool/__init__.py" = [
    '^__version__ = "{version}"$',
]
